# MAI-HL-class

./: .gitignore  CMakeLists.txt  README.md  SN.postman_collection.json  addvars.sh  commands.sql  components.md  docker-compose.yml  gendata.json  load_data.cpp  load_data.sh  main.cpp  main_chat.cpp  main_user.cpp  main_wall.cpp  old_docker_compose.yml  performance.md  run_tests.sh  social-network-api.yaml  socialnetworkapi.yaml  socialnetworkcollection.postman_collection.json  start.sh  task.md  test_cache.sh  test_no_cache.sh
chat_server/: DockerChat  http_request_factory.h  http_web_server.h
chat_server/handlers/: chat_handler.h
config/: config.cpp  config.h
database/: cache.cpp  cache.h  chat.cpp  chat.h  database.cpp  database.h  user.cpp  user.h  wall.cpp  wall.h
description/: components.md  context.md
docker/: docker-compose.yml
docker/my_service/: Dockerfile
docker/mysql/: Dockerfile
docker/proxysql/: Dockerfile  proxysql.cnf
global_server/: http_request_factory.h  http_web_server.h
global_server/handlers/: chat_handler.h  user_handler.h  wall_handler.h
mysql/: Dockerfile
user_server/: DockerUser  http_request_factory.h  http_web_server.h
user_server/handlers/: user_handler.h
wall_server/: DockerWall
wall_server/handlers/: wall_handler.h
